test/scc/ext/tm/semantic-errors/010.a
010.t:9:13: error: volatile objects cannot be used within _Atomic block